--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,6 @@
     <include src="./partials/advantages.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/footer.html"></include>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
